added db context and ef added

--- a/SeedProject_V6/appsettings.json
+++ b/SeedProject_V6/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "seed_academy_db": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Seed_Project_DB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
