--- a/SeedProject_V6/appsettings.json
+++ b/SeedProject_V6/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "seed_academy_db": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Seed_Project_DB;Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "seed_academy_db": "Data Source=seed.database.windows.net;Initial Catalog=Seed_DB;User ID=vlad;Password=3989302As;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
